--- a/gui/src/viewer/zoomwindow.ui
+++ b/gui/src/viewer/zoomwindow.ui
@@ -69,7 +69,7 @@
                <x>0</x>
                <y>0</y>
                <width>69</width>
-               <height>436</height>
+               <height>417</height>
               </rect>
              </property>
              <layout class="QVBoxLayout" name="verticalLayout_3">
@@ -98,6 +98,16 @@
       <widget class="QProgressBar" name="progressBarDownload">
        <property name="enabled">
         <bool>true</bool>
+       </property>
+      </widget>
+     </item>
+     <item row="2" column="0">
+      <widget class="QLabel" name="labelLoadingError">
+       <property name="text">
+        <string/>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignCenter</set>
        </property>
       </widget>
      </item>
@@ -272,9 +282,6 @@
   <tabstop>buttonOpenFav</tabstop>
  </tabstops>
  <resources>
-  <include location="../../../resources/resources.qrc"/>
-  <include location="../../../resources/resources.qrc"/>
-  <include location="../../../resources/resources.qrc"/>
   <include location="../../../resources/resources.qrc"/>
  </resources>
  <connections>
