Fix 'getting started' url in first launch window (fix #994)

--- a/gui/src/settings/startwindow.ui
+++ b/gui/src/settings/startwindow.ui
@@ -114,7 +114,7 @@
    <item>
     <widget class="QLabel" name="labelHelp">
      <property name="text">
-      <string>&lt;i&gt;If you use Grabber for the first time, it is advised to first read the &lt;a href=&quot;{website}/wiki/GettingStarted&quot;&gt;getting started&lt;/a&gt; wiki page.&lt;/i&gt;</string>
+      <string>&lt;i&gt;If you use Grabber for the first time, it is advised to first read the &lt;a href=&quot;{github}/wiki/GettingStarted&quot;&gt;getting started&lt;/a&gt; wiki page.&lt;/i&gt;</string>
      </property>
      <property name="wordWrap">
       <bool>true</bool>
