--- a/gui/src/utils/tag-loader/tag-loader.ui
+++ b/gui/src/utils/tag-loader/tag-loader.ui
@@ -81,5 +81,42 @@
  <resources>
   <include location="../../../../resources/resources.qrc"/>
  </resources>
- <connections/>
+ <connections>
+  <connection>
+   <sender>buttonStart</sender>
+   <signal>clicked()</signal>
+   <receiver>TagLoader</receiver>
+   <slot>start()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>209</x>
+     <y>72</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>156</x>
+     <y>73</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>buttonCancel</sender>
+   <signal>clicked()</signal>
+   <receiver>TagLoader</receiver>
+   <slot>cancel()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>307</x>
+     <y>75</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>351</x>
+     <y>79</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
+ <slots>
+  <slot>start()</slot>
+  <slot>cancel()</slot>
+ </slots>
 </ui>
