Add precision about the globality of the MD5 list (issue #1013)

--- a/gui/src/settings/optionswindow.ui
+++ b/gui/src/settings/optionswindow.ui
@@ -770,7 +770,7 @@
         <item row="10" column="0">
          <widget class="QLabel" name="label_19">
           <property name="text">
-           <string>If a file already exists</string>
+           <string>If a file already exists globally</string>
           </property>
          </widget>
         </item>
