--- a/gui/src/mainwindow.ui
+++ b/gui/src/mainwindow.ui
@@ -128,6 +128,11 @@
           </column>
           <column>
            <property name="text">
+            <string>Post-filtering</string>
+           </property>
+          </column>
+          <column>
+           <property name="text">
             <string>Get blacklisted</string>
            </property>
           </column>
