Fix empty space at the bottom of the results

--- a/gui/src/tabs/tag-tab.ui
+++ b/gui/src/tabs/tag-tab.ui
@@ -321,6 +321,14 @@
       <bool>true</bool>
      </property>
      <widget class="QWidget" name="scrollAreaWidget">
+      <property name="geometry">
+       <rect>
+        <x>0</x>
+        <y>0</y>
+        <width>780</width>
+        <height>325</height>
+       </rect>
+      </property>
       <layout class="QVBoxLayout" name="verticalLayout">
        <property name="leftMargin">
         <number>0</number>
