--- a/gui/src/sources/sourcessettingswindow.ui
+++ b/gui/src/sources/sourcessettingswindow.ui
@@ -14,7 +14,7 @@
    <string>Site options</string>
   </property>
   <property name="windowIcon">
-   <iconset resource="../../../resources/resources.qrc">
+   <iconset resource="../../resources/resources.qrc">
     <normaloff>:/images/icon.ico</normaloff>:/images/icon.ico</iconset>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
@@ -1034,7 +1034,7 @@
   <tabstop>buttonAccept</tabstop>
  </tabstops>
  <resources>
-  <include location="../../../resources/resources.qrc"/>
+  <include location="../../resources/resources.qrc"/>
  </resources>
  <connections>
   <connection>
