--- a/gui/src/utils/tag-loader/tag-loader.ui
+++ b/gui/src/utils/tag-loader/tag-loader.ui
@@ -14,7 +14,7 @@
    <string>Md5 list fixer</string>
   </property>
   <property name="windowIcon">
-   <iconset resource="../../../../resources/resources.qrc">
+   <iconset resource="../../../resources/resources.qrc">
     <normaloff>:/images/icon.ico</normaloff>:/images/icon.ico</iconset>
   </property>
   <layout class="QFormLayout" name="formLayout">
@@ -104,7 +104,7 @@
   <tabstop>buttonCancel</tabstop>
  </tabstops>
  <resources>
-  <include location="../../../../resources/resources.qrc"/>
+  <include location="../../../resources/resources.qrc"/>
  </resources>
  <connections>
   <connection>
