--- a/gui/src/viewer/zoomwindow.ui
+++ b/gui/src/viewer/zoomwindow.ui
@@ -23,7 +23,7 @@
    <string>Image</string>
   </property>
   <property name="windowIcon">
-   <iconset resource="../../../resources/resources.qrc">
+   <iconset resource="../../resources/resources.qrc">
     <normaloff>:/images/icon.ico</normaloff>:/images/icon.ico</iconset>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_2" stretch="1,0,0">
@@ -282,7 +282,7 @@
   <tabstop>buttonOpenFav</tabstop>
  </tabstops>
  <resources>
-  <include location="../../../resources/resources.qrc"/>
+  <include location="../../resources/resources.qrc"/>
  </resources>
  <connections>
   <connection>
