--- a/gui/src/aboutwindow.ui
+++ b/gui/src/aboutwindow.ui
@@ -20,7 +20,7 @@
    <string>About Grabber</string>
   </property>
   <property name="windowIcon">
-   <iconset resource="../../resources/resources.qrc">
+   <iconset resource="../resources/resources.qrc">
     <normaloff>:/images/icon.ico</normaloff>:/images/icon.ico</iconset>
   </property>
   <layout class="QHBoxLayout" name="horizontalLayout" stretch="0,1">
@@ -30,7 +30,7 @@
       <string/>
      </property>
      <property name="pixmap">
-      <pixmap resource="../../resources/resources.qrc">:/images/icon.png</pixmap>
+      <pixmap resource="../resources/resources.qrc">:/images/icon.png</pixmap>
      </property>
     </widget>
    </item>
@@ -95,7 +95,7 @@
   </layout>
  </widget>
  <resources>
-  <include location="../../resources/resources.qrc"/>
+  <include location="../resources/resources.qrc"/>
  </resources>
  <connections/>
 </ui>
