Fix white space at the bottom of the scroll area (issue #1039)

--- a/gui/src/tabs/tag-tab.ui
+++ b/gui/src/tabs/tag-tab.ui
@@ -357,10 +357,13 @@
          <property name="orientation">
           <enum>Qt::Vertical</enum>
          </property>
+         <property name="sizeType">
+          <enum>QSizePolicy::MinimumExpanding</enum>
+         </property>
          <property name="sizeHint" stdset="0">
           <size>
-           <width>20</width>
-           <height>285</height>
+           <width>0</width>
+           <height>0</height>
           </size>
          </property>
         </spacer>
