Add setting to not preload all tabs at startup (fix #1050)

--- a/gui/src/settings/optionswindow.ui
+++ b/gui/src/settings/optionswindow.ui
@@ -1677,6 +1677,13 @@
           </property>
          </widget>
         </item>
+        <item row="8" column="0" colspan="2">
+         <widget class="QCheckBox" name="checkPreloadAllTabs">
+          <property name="text">
+           <string>Preload all tabs when restoring a previous session</string>
+          </property>
+         </widget>
+        </item>
        </layout>
       </widget>
       <widget class="QWidget" name="pageInterfaceSearchResults">
