Fix tag loader window title

--- a/gui/src/utils/tag-loader/tag-loader.ui
+++ b/gui/src/utils/tag-loader/tag-loader.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Md5 list fixer</string>
+   <string>Tag loader</string>
   </property>
   <property name="windowIcon">
    <iconset resource="../../../resources/resources.qrc">
